--- a/series.conf
+++ b/series.conf
@@ -13141,6 +13141,7 @@
 	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/mtd-sm_ftl-Fix-deadlock-caused-by-cancel_work_sync-i.patch
 	patches.suse/mtd-partitions-Fix-refcount-leak-in-parse_redboot_of.patch
+	patches.suse/mtd-parsers-ofpart-Fix-refcount-leak-in-bcm4908_part.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
