--- a/series.conf
+++ b/series.conf
@@ -13180,6 +13180,7 @@
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
+	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 
 	########################################################
 	# end of sorted patches
