--- a/series.conf
+++ b/series.conf
@@ -13145,6 +13145,7 @@
 	patches.suse/mtd-st_spi_fsm-Add-a-clk_disable_unprepare-in-.probe.patch
 	patches.suse/mtd-dataflash-Add-SPI-ID-table.patch
 	patches.suse/mtd-rawnand-meson-Fix-a-potential-double-free-issue.patch
+	patches.suse/mtd-rawnand-arasan-Update-NAND-bus-clock-instead-of-.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
