--- a/series.conf
+++ b/series.conf
@@ -13147,6 +13147,7 @@
 	patches.suse/mtd-rawnand-meson-Fix-a-potential-double-free-issue.patch
 	patches.suse/mtd-rawnand-arasan-Update-NAND-bus-clock-instead-of-.patch
 	patches.suse/mtd-rawnand-arasan-Fix-clock-rate-in-NV-DDR.patch
+	patches.suse/mtd-spi-nor-fix-spi_nor_spimem_setup_op-call-in-spi_.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
