tpm: eventlog: Fix section mismatch for DEBUG_SECTION_MISMATCH (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13149,6 +13149,7 @@
 	patches.suse/mtd-rawnand-arasan-Fix-clock-rate-in-NV-DDR.patch
 	patches.suse/mtd-spi-nor-fix-spi_nor_spimem_setup_op-call-in-spi_.patch
 	patches.suse/KEYS-asymmetric-enforce-SM2-signature-use-pkey-algo.patch
+	patches.suse/tpm-eventlog-Fix-section-mismatch-for-DEBUG_SECTION_.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
