mtd: partitions: Fix refcount leak in parse_redboot_of (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13140,6 +13140,7 @@
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/mtd-sm_ftl-Fix-deadlock-caused-by-cancel_work_sync-i.patch
+	patches.suse/mtd-partitions-Fix-refcount-leak-in-parse_redboot_of.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
