--- a/series.conf
+++ b/series.conf
@@ -13173,6 +13173,7 @@
 	patches.suse/ASoC-fsl_easrc-use-snd_pcm_format_t-type-for-sample_.patch
 	patches.suse/ASoC-imx-card-use-snd_pcm_format_t-type-for-asrc_for.patch
 	patches.suse/ASoC-mchp-spdifrx-disable-end-of-block-interrupt-on-.patch
+	patches.suse/mfd-t7l66xb-Drop-platform-disable-callback.patch
 	patches.suse/Revert-drivers-video-backlight-platform_lcd.c-add-su.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
