--- a/series.conf
+++ b/series.conf
@@ -13143,6 +13143,7 @@
 	patches.suse/mtd-partitions-Fix-refcount-leak-in-parse_redboot_of.patch
 	patches.suse/mtd-parsers-ofpart-Fix-refcount-leak-in-bcm4908_part.patch
 	patches.suse/mtd-st_spi_fsm-Add-a-clk_disable_unprepare-in-.probe.patch
+	patches.suse/mtd-dataflash-Add-SPI-ID-table.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
