mtd: maps: Fix refcount leak in ap_flash_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13138,6 +13138,7 @@
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
+	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
