--- a/series.conf
+++ b/series.conf
@@ -13166,6 +13166,7 @@
 	patches.suse/ASoC-qcom-Fix-missing-of_node_put-in-asoc_qcom_lpass.patch
 	patches.suse/ASoC-imx-card-Fix-DSD-PDM-mclk-frequency.patch
 	patches.suse/ASoC-mt6359-Fix-refcount-leak-bug.patch
+	patches.suse/ALSA-usb-audio-Add-quirk-for-Behringer-UMC202HD.patch
 	patches.suse/ASoC-qcom-q6dsp-Fix-an-off-by-one-in-q6adm_alloc_cop.patch
 	patches.suse/ASoC-audio-graph-card-Add-of_node_put-in-fail-path.patch
 	patches.suse/ASoC-fsl_asrc-force-cast-the-asrc_format-type.patch
