--- a/series.conf
+++ b/series.conf
@@ -13152,6 +13152,7 @@
 	patches.suse/tpm-eventlog-Fix-section-mismatch-for-DEBUG_SECTION_.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
+	patches.suse/ALSA-usb-audio-Add-endianness-annotations.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
 	patches.suse/ASoC-cros_ec_codec-Fix-refcount-leak-in-cros_ec_code.patch
 	patches.suse/ASoC-samsung-Fix-error-handling-in-aries_audio_probe.patch
