profiling: fix shift too large makes kernel panic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13194,6 +13194,7 @@
 	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
+	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
 
 	########################################################
 	# end of sorted patches
