--- a/series.conf
+++ b/series.conf
@@ -13188,6 +13188,7 @@
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
+	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 
 	########################################################
 	# end of sorted patches
