--- a/series.conf
+++ b/series.conf
@@ -13189,6 +13189,7 @@
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
+	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 
 	########################################################
 	# end of sorted patches
