--- a/series.conf
+++ b/series.conf
@@ -9980,6 +9980,7 @@
 	patches.suse/PM-domains-Fix-sleep-in-atomic-bug-caused-by-genpd_d.patch
 	patches.suse/thermal-int340x-Check-for-NULL-after-calling-kmemdup.patch
 	patches.suse/thermal-int340x-Increase-bitmap-size.patch
+	patches.suse/random-remove-useless-header-comment.patch
 	patches.suse/hwrng-cavium-HW_RANDOM_CAVIUM-should-depend-on-ARCH_.patch
 	patches.suse/crypto-sun8i-ss-really-disable-hash-on-A80.patch
 	patches.suse/crypto-rsa-pkcs1pad-only-allow-with-rsa.patch
