lib/smp_processor_id: fix imbalanced instrumentation_end() call (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13196,6 +13196,7 @@
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
+	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
 
 	########################################################
 	# end of sorted patches
