video: fbdev: vt8623fb: Check the size of screen before memset_io() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13191,6 +13191,7 @@
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 	patches.suse/video-fbdev-arkfb-Fix-a-divide-by-zero-bug-in-ark_se.patch
+	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
 
 	########################################################
 	# end of sorted patches
