--- a/series.conf
+++ b/series.conf
@@ -13197,6 +13197,7 @@
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
+	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
 
 	########################################################
 	# end of sorted patches
