--- a/series.conf
+++ b/series.conf
@@ -13192,6 +13192,7 @@
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 	patches.suse/video-fbdev-arkfb-Fix-a-divide-by-zero-bug-in-ark_se.patch
 	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
+	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 
 	########################################################
 	# end of sorted patches
