--- a/series.conf
+++ b/series.conf
@@ -13198,6 +13198,7 @@
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
 	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
+	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 
 	########################################################
 	# end of sorted patches
