kfifo: fix kfifo_to_user() return type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13195,6 +13195,7 @@
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
+	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 
 	########################################################
 	# end of sorted patches
