iwlwifi: dbg-tlv: clean up iwl_dbg_tlv_update_drams() (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10506,6 +10506,7 @@
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
 	patches.suse/iwlwifi-yoyo-remove-DBGI_SRAM-address-reset-writing.patch
+	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
