--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1564,3 +1564,5 @@ cf10bd4c4aff8dd64d1aa7f2a529d0c672bc16af # KASAN not configured
 5aff4dfdb4ae2741cfff759d917f597f2c7f70aa # Cosmetic patch
 c200e4bb44e80b343c09841e7caaaca0aac5e5fa # UML not used
 4a3d2717d140401df7501a95e454180831a0c5af # xtensa not used
+63b903dfebdea92aa92ad337d8451a6fbfeabf9d # m68k specific
+734f3719d3438f9cc181d674c33ca9762e9148a1 # m68k specific
