--- a/series.conf
+++ b/series.conf
@@ -53954,6 +53954,7 @@
 	patches.suse/scsi-scsi_debug-Sanity-check-block-descriptor-length-in-resp_mode_select.patch
 	patches.suse/tracing-Check-pid-filtering-when-creating-events.patch
 	patches.suse/tracing-Fix-pid-filtering-when-triggers-are-attached.patch
+	patches.suse/KVM-arm64-Avoid-setting-the-upper-32-bits-of-TCR_EL2-and-CPTR_EL2-to-1.patch
 	patches.suse/ASoC-tegra-Fix-wrong-value-type-in-ADMAIF.patch
 	patches.suse/ASoC-tegra-Fix-wrong-value-type-in-I2S.patch
 	patches.suse/ASoC-tegra-Fix-wrong-value-type-in-DMIC.patch
