--- a/series.conf
+++ b/series.conf
@@ -12842,6 +12842,7 @@
 	patches.suse/Documentation-siphash-Fix-typo-in-the-name-of-offset.patch
 	patches.suse/selftests-timers-valid-adjtimex-build-fix-for-newer-.patch
 	patches.suse/selftests-timers-clocksource-switch-fix-passing-erro.patch
+	patches.suse/btrfs-properly-flag-filesystem-with-btrfs_feature_incompat_big_metadata.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
