--- a/series.conf
+++ b/series.conf
@@ -12488,6 +12488,7 @@
 	patches.suse/iio-accel-mma8452-ignore-the-return-value-of-reset-o.patch
 	patches.suse/exfat-use-updated-exfat_chain-directly-during-renami.patch
 	patches.suse/modpost-fix-section-mismatch-check-for-exported-init.patch
+	patches.suse/powerpc-pseries-wire-up-rng-during-setup_arch.patch
 	patches.suse/powerpc-rtas-Allow-ibm-platform-dump-RTAS-call-with-.patch
 	patches.suse/ARM-dts-imx7-Move-hsic_phy-power-domain-to-HSIC-PHY-.patch
 	patches.suse/ARM-dts-imx6qdl-correct-PU-regulator-ramp-delay.patch
