--- a/series.conf
+++ b/series.conf
@@ -12490,6 +12490,7 @@
 	patches.suse/modpost-fix-section-mismatch-check-for-exported-init.patch
 	patches.suse/powerpc-pseries-wire-up-rng-during-setup_arch.patch
 	patches.suse/powerpc-rtas-Allow-ibm-platform-dump-RTAS-call-with-.patch
+	patches.suse/powerpc-powernv-wire-up-rng-during-setup_arch.patch
 	patches.suse/ARM-dts-imx7-Move-hsic_phy-power-domain-to-HSIC-PHY-.patch
 	patches.suse/ARM-dts-imx6qdl-correct-PU-regulator-ramp-delay.patch
 	patches.suse/ARM-Fix-refcount-leak-in-axxia_boot_secondary.patch
