powerpc/powernv: Staticify functions without prototypes (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -45151,6 +45151,7 @@
 	patches.suse/powerpc-pseries-Fix-missing-of_node_put-in-rng_init.patch
 	patches.suse/powerpc-icp-hv-Fix-missing-of_node_put-in-success-pa.patch
 	patches.suse/cxl-Rework-error-message-for-incompatible-slots.patch
+	patches.suse/powerpc-powernv-Staticify-functions-without-prototyp.patch
 	patches.suse/powerpc-hwirq-Remove-stale-forward-irq_chip-declarat.patch
 	patches.suse/powerpc-irq-Drop-forward-declaration-of-struct-irqac.patch
 	patches.suse/powerpc-fpu-Drop-cvt_fd-and-cvt_df.patch
