--- a/series.conf
+++ b/series.conf
@@ -56192,6 +56192,7 @@
 	patches.suse/iio-accel-mma8452-ignore-the-return-value-of-reset-o.patch
 	patches.suse/powerpc-pseries-wire-up-rng-during-setup_arch.patch
 	patches.suse/powerpc-rtas-Allow-ibm-platform-dump-RTAS-call-with-.patch
+	patches.suse/powerpc-powernv-wire-up-rng-during-setup_arch.patch
 	patches.suse/soc-bcm-brcmstb-pm-pm-arm-Fix-refcount-leak-in-brcms.patch
 	patches.suse/virtio-net-fix-race-between-ndo_open-and-virtio_devi.patch
 	patches.suse/caif_virtio-fix-race-between-virtio_device_ready-and.patch
