powerpc/powernv: Avoid crashing if rng is NULL (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -13204,6 +13204,7 @@
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
+	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
