--- a/series.conf
+++ b/series.conf
@@ -56550,6 +56550,7 @@
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
+	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
