powerpc/powernv/kvm: Use darn for H_RANDOM on Power9 (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -13205,6 +13205,7 @@
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
+	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
