--- a/series.conf
+++ b/series.conf
@@ -13204,6 +13204,7 @@
 	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
+	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
 
 	########################################################
 	# end of sorted patches
