--- a/series.conf
+++ b/series.conf
@@ -13218,6 +13218,7 @@
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
 	patches.suse/rpmsg-mtk_rpmsg-Fix-circular-locking-dependency.patch
 	patches.suse/rpmsg-qcom_smd-Fix-refcount-leak-in-qcom_smd_parse_e.patch
+	patches.suse/remoteproc-k3-r5-Fix-refcount-leak-in-k3_r5_cluster_.patch
 
 	########################################################
 	# end of sorted patches
