--- a/series.conf
+++ b/series.conf
@@ -13203,6 +13203,7 @@
 	patches.suse/lib-smp_processor_id-fix-imbalanced-instrumentation_.patch
 	patches.suse/proc-fix-a-dentry-lock-race-between-release_task-and.patch
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
+	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 
 	########################################################
 	# end of sorted patches
