rpmsg: char: Add mutex protection for rpmsg_eptdev_open() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13215,6 +13215,7 @@
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
+	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
 
 	########################################################
 	# end of sorted patches
