rpmsg: mtk_rpmsg: Fix circular locking dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13216,6 +13216,7 @@
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
+	patches.suse/rpmsg-mtk_rpmsg-Fix-circular-locking-dependency.patch
 
 	########################################################
 	# end of sorted patches
