remoteproc: qcom: pas: Check if coredump is enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13223,6 +13223,7 @@
 	patches.suse/remoteproc-qcom-wcnss-Fix-handling-of-IRQs.patch
 	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
 	patches.suse/remoteproc-qcom-pas-Mark-devices-as-wakeup-capable.patch
+	patches.suse/remoteproc-qcom-pas-Check-if-coredump-is-enabled.patch
 
 	########################################################
 	# end of sorted patches
