thermal: sysfs: Fix cooling_device_stats_setup() error code path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13213,6 +13213,7 @@
 	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
+	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 
 	########################################################
 	# end of sorted patches
