tty: n_gsm: fix non flow control frames during mux flow off (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13208,6 +13208,7 @@
 	patches.suse/tty-n_gsm-fix-tty-registration-before-control-channe.patch
 	patches.suse/tty-n_gsm-fix-wrong-queuing-behavior-in-gsm_dlci_dat.patch
 	patches.suse/tty-n_gsm-fix-missing-timer-to-handle-stalled-links.patch
+	patches.suse/tty-n_gsm-fix-non-flow-control-frames-during-mux-flo.patch
 
 	########################################################
 	# end of sorted patches
