remoteproc: qcom: q6v5-mss: add powerdomains to MSM8996 config (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13221,6 +13221,7 @@
 	patches.suse/remoteproc-k3-r5-Fix-refcount-leak-in-k3_r5_cluster_.patch
 	patches.suse/remoteproc-imx_rproc-Fix-refcount-leak-in-imx_rproc_.patch
 	patches.suse/remoteproc-qcom-wcnss-Fix-handling-of-IRQs.patch
+	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
 
 	########################################################
 	# end of sorted patches
