rpmsg: qcom_smd: Fix refcount leak in qcom_smd_parse_edge (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13217,6 +13217,7 @@
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
 	patches.suse/rpmsg-mtk_rpmsg-Fix-circular-locking-dependency.patch
+	patches.suse/rpmsg-qcom_smd-Fix-refcount-leak-in-qcom_smd_parse_e.patch
 
 	########################################################
 	# end of sorted patches
