serial: 8250_fsl: Don't report FE, PE and OE twice (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13211,6 +13211,7 @@
 	patches.suse/tty-n_gsm-fix-non-flow-control-frames-during-mux-flo.patch
 	patches.suse/tty-n_gsm-fix-packet-re-transmission-without-open-co.patch
 	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
+	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
 
 	########################################################
 	# end of sorted patches
