--- a/series.conf
+++ b/series.conf
@@ -13210,6 +13210,7 @@
 	patches.suse/tty-n_gsm-fix-missing-timer-to-handle-stalled-links.patch
 	patches.suse/tty-n_gsm-fix-non-flow-control-frames-during-mux-flo.patch
 	patches.suse/tty-n_gsm-fix-packet-re-transmission-without-open-co.patch
+	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
 
 	########################################################
 	# end of sorted patches
