--- a/series.conf
+++ b/series.conf
@@ -13212,6 +13212,7 @@
 	patches.suse/tty-n_gsm-fix-packet-re-transmission-without-open-co.patch
 	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
+	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 
 	########################################################
 	# end of sorted patches
