--- a/series.conf
+++ b/series.conf
@@ -13219,6 +13219,7 @@
 	patches.suse/rpmsg-mtk_rpmsg-Fix-circular-locking-dependency.patch
 	patches.suse/rpmsg-qcom_smd-Fix-refcount-leak-in-qcom_smd_parse_e.patch
 	patches.suse/remoteproc-k3-r5-Fix-refcount-leak-in-k3_r5_cluster_.patch
+	patches.suse/remoteproc-imx_rproc-Fix-refcount-leak-in-imx_rproc_.patch
 
 	########################################################
 	# end of sorted patches
