tty: n_gsm: Delete gsmtty open SABM frame when config requester (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6347,6 +6347,7 @@
 	patches.suse/component-do-not-leave-master-devres-group-open-afte.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-when-config-requester.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-printk-info-when-config-r.patch
+	patches.suse/tty-n_gsm-Delete-gsmtty-open-SABM-frame-when-config-.patch
 	patches.suse/tty-n_gsm-Save-dlci-address-open-status-when-config-.patch
 	patches.suse/tty-n_gsm-Don-t-ignore-write-return-value-in-gsmld_o.patch
 	patches.suse/serial-core-Fix-initializing-and-restoring-termios-s.patch
