tty: n_gsm: fix wrong queuing behavior in gsm_dlci_data_output() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13206,6 +13206,7 @@
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
 	patches.suse/tty-n_gsm-fix-tty-registration-before-control-channe.patch
+	patches.suse/tty-n_gsm-fix-wrong-queuing-behavior-in-gsm_dlci_dat.patch
 
 	########################################################
 	# end of sorted patches
