--- a/series.conf
+++ b/series.conf
@@ -13224,6 +13224,7 @@
 	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
 	patches.suse/remoteproc-qcom-pas-Mark-devices-as-wakeup-capable.patch
 	patches.suse/remoteproc-qcom-pas-Check-if-coredump-is-enabled.patch
+	patches.suse/remoteproc-sysmon-Wait-for-SSCTL-service-to-come-up.patch
 
 	########################################################
 	# end of sorted patches
