--- a/series.conf
+++ b/series.conf
@@ -13214,6 +13214,7 @@
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
+	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 
 	########################################################
 	# end of sorted patches
