--- a/series.conf
+++ b/series.conf
@@ -13222,6 +13222,7 @@
 	patches.suse/remoteproc-imx_rproc-Fix-refcount-leak-in-imx_rproc_.patch
 	patches.suse/remoteproc-qcom-wcnss-Fix-handling-of-IRQs.patch
 	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
+	patches.suse/remoteproc-qcom-pas-Mark-devices-as-wakeup-capable.patch
 
 	########################################################
 	# end of sorted patches
