tty: n_gsm: fix packet re-transmission without open control channel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13209,6 +13209,7 @@
 	patches.suse/tty-n_gsm-fix-wrong-queuing-behavior-in-gsm_dlci_dat.patch
 	patches.suse/tty-n_gsm-fix-missing-timer-to-handle-stalled-links.patch
 	patches.suse/tty-n_gsm-fix-non-flow-control-frames-during-mux-flo.patch
+	patches.suse/tty-n_gsm-fix-packet-re-transmission-without-open-co.patch
 
 	########################################################
 	# end of sorted patches
