remoteproc: qcom: wcnss: Fix handling of IRQs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13220,6 +13220,7 @@
 	patches.suse/rpmsg-qcom_smd-Fix-refcount-leak-in-qcom_smd_parse_e.patch
 	patches.suse/remoteproc-k3-r5-Fix-refcount-leak-in-k3_r5_cluster_.patch
 	patches.suse/remoteproc-imx_rproc-Fix-refcount-leak-in-imx_rproc_.patch
+	patches.suse/remoteproc-qcom-wcnss-Fix-handling-of-IRQs.patch
 
 	########################################################
 	# end of sorted patches
