tty: n_gsm: fix tty registration before control channel open (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13205,6 +13205,7 @@
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
+	patches.suse/tty-n_gsm-fix-tty-registration-before-control-channe.patch
 
 	########################################################
 	# end of sorted patches
