--- a/series.conf
+++ b/series.conf
@@ -13213,6 +13213,7 @@
 	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
+	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
