--- a/series.conf
+++ b/series.conf
@@ -13217,6 +13217,7 @@
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/watchdog-sp5100_tco-Fix-a-memory-leak-of-EFCH-MMIO-r.patch
+	patches.suse/watchdog-armada_37xx_wdt-check-the-return-value-of-d.patch
 	patches.suse/rpmsg-char-Add-mutex-protection-for-rpmsg_eptdev_ope.patch
 	patches.suse/rpmsg-mtk_rpmsg-Fix-circular-locking-dependency.patch
 	patches.suse/rpmsg-qcom_smd-Fix-refcount-leak-in-qcom_smd_parse_e.patch
