- tty: n_gsm: Modify cr bit value when config requester   (git-fixes). - Refresh   patches.suse/tty-n_gsm-Modify-CR-PF-bit-when-config-requester.patch.

--- a/series.conf
+++ b/series.conf
@@ -6345,6 +6345,7 @@
 	patches.suse/dyndbg-make-dyndbg-a-known-cli-param.patch
 	patches.suse/device-property-Add-missed-header-in-fwnode.h.patch
 	patches.suse/component-do-not-leave-master-devres-group-open-afte.patch
+	patches.suse/tty-n_gsm-Modify-cr-bit-value-when-config-requester.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-when-config-requester.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-printk-info-when-config-r.patch
 	patches.suse/tty-n_gsm-Delete-gsmtty-open-SABM-frame-when-config-.patch
