- tty: n_gsm: Delete gsm_disconnect when config requester   (git-fixes). - Refresh   patches.suse/tty-n_gsm-fix-restart-handling-via-CLD-command.patch.

--- a/series.conf
+++ b/series.conf
@@ -6348,6 +6348,7 @@
 	patches.suse/tty-n_gsm-Modify-cr-bit-value-when-config-requester.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-when-config-requester.patch
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-printk-info-when-config-r.patch
+	patches.suse/tty-n_gsm-Delete-gsm_disconnect-when-config-requeste.patch
 	patches.suse/tty-n_gsm-Delete-gsmtty-open-SABM-frame-when-config-.patch
 	patches.suse/tty-n_gsm-Save-dlci-address-open-status-when-config-.patch
 	patches.suse/tty-n_gsm-Don-t-ignore-write-return-value-in-gsmld_o.patch
