tools include: add dis-asm-compat.h to handle version differences (bsc#1202195).

--- a/series.conf
+++ b/series.conf
@@ -59,6 +59,7 @@
 	patches.suse/0001-drm-client-Don-t-add-new-command-line-mode.patch
 	patches.suse/tools-build-Add-feature-test-for-init_disassemble_in.patch
 	patches.suse/tools-build-Don-t-display-disassembler-four-args-fea.patch
+	patches.suse/tools-include-add-dis-asm-compat.h-to-handle-version.patch
 	########################################################
 	# end of sorted patches
 	########################################################
