tools build: Add feature test for init_disassemble_info API changes (bsc#1202195).

--- a/series.conf
+++ b/series.conf
@@ -57,6 +57,7 @@
 	patches.suse/0001-drm-Always-warn-if-user-defined-modes-are-not-suppor.patch
 	patches.suse/0001-drm-client-Look-for-command-line-modes-first.patch
 	patches.suse/0001-drm-client-Don-t-add-new-command-line-mode.patch
+	patches.suse/tools-build-Add-feature-test-for-init_disassemble_in.patch
 	########################################################
 	# end of sorted patches
 	########################################################
