tools bpf_jit_disasm: Don't display disassembler-four-args feature test (bsc#1202195).

--- a/series.conf
+++ b/series.conf
@@ -62,6 +62,7 @@
 	patches.suse/tools-include-add-dis-asm-compat.h-to-handle-version.patch
 	patches.suse/tools-perf-Fix-compilation-error-with-new-binutils.patch
 	patches.suse/tools-bpf_jit_disasm-Fix-compilation-error-with-new-.patch
+	patches.suse/tools-bpf_jit_disasm-Don-t-display-disassembler-four.patch
 	########################################################
 	# end of sorted patches
 	########################################################
