--- a/series.conf
+++ b/series.conf
@@ -58,6 +58,7 @@
 	patches.suse/0001-drm-client-Look-for-command-line-modes-first.patch
 	patches.suse/0001-drm-client-Don-t-add-new-command-line-mode.patch
 	patches.suse/tools-build-Add-feature-test-for-init_disassemble_in.patch
+	patches.suse/tools-build-Don-t-display-disassembler-four-args-fea.patch
 	########################################################
 	# end of sorted patches
 	########################################################
