tools bpftool: Fix compilation error with new binutils (bsc#1202195).

--- a/series.conf
+++ b/series.conf
@@ -63,6 +63,7 @@
 	patches.suse/tools-perf-Fix-compilation-error-with-new-binutils.patch
 	patches.suse/tools-bpf_jit_disasm-Fix-compilation-error-with-new-.patch
 	patches.suse/tools-bpf_jit_disasm-Don-t-display-disassembler-four.patch
+	patches.suse/tools-bpftool-Fix-compilation-error-with-new-binutil.patch
 	########################################################
 	# end of sorted patches
 	########################################################
