--- a/series.conf
+++ b/series.conf
@@ -6350,6 +6350,7 @@
 	patches.suse/tty-n_gsm-Modify-CR-PF-bit-printk-info-when-config-r.patch
 	patches.suse/tty-n_gsm-Delete-gsm_disconnect-when-config-requeste.patch
 	patches.suse/tty-n_gsm-Delete-gsmtty-open-SABM-frame-when-config-.patch
+	patches.suse/tty-n_gsm-Modify-gsmtty-driver-register-method-when-.patch
 	patches.suse/tty-n_gsm-Save-dlci-address-open-status-when-config-.patch
 	patches.suse/tty-n_gsm-Don-t-ignore-write-return-value-in-gsmld_o.patch
 	patches.suse/serial-core-Fix-initializing-and-restoring-termios-s.patch
