tty: n_gsm: clean up indenting in gsm_queue() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6352,6 +6352,7 @@
 	patches.suse/tty-n_gsm-Delete-gsmtty-open-SABM-frame-when-config-.patch
 	patches.suse/tty-n_gsm-Modify-gsmtty-driver-register-method-when-.patch
 	patches.suse/tty-n_gsm-Save-dlci-address-open-status-when-config-.patch
+	patches.suse/tty-n_gsm-clean-up-indenting-in-gsm_queue.patch
 	patches.suse/tty-n_gsm-Don-t-ignore-write-return-value-in-gsmld_o.patch
 	patches.suse/serial-core-Fix-initializing-and-restoring-termios-s.patch
 	patches.suse/serial-8250-Fix-reporting-real-baudrate-value-in-c_o.patch
