--- a/series.conf
+++ b/series.conf
@@ -8514,6 +8514,7 @@
 	patches.suse/drivers-firmware-Add-missing-platform_device_put-in-.patch
 	patches.suse/staging-rtl8192e-return-error-code-from-rtllib_softm.patch
 	patches.suse/staging-rtl8192e-rtllib_module-fix-error-handle-case.patch
+	patches.suse/n_gsm-remove-unused-parameters-from-gsm_error.patch
 	patches.suse/tty-serial-imx-clear-the-RTSD-status-before-enable-t.patch
 	patches.suse/tty-serial-imx-disable-UCR4_OREN-in-.stop_rx-instead.patch
 	patches.suse/tty-serial-atmel-Check-return-code-of-dmaengine_subm.patch
