tty: n_gsm: clean up dead code in gsm_queue() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12192,6 +12192,7 @@
 	patches.suse/tty-n_tty-Restore-EOF-push-handling-behavior.patch
 	patches.suse/serial-8250_aspeed_vuart-Fix-potential-NULL-derefere.patch
 	patches.suse/tty-serial-fsl_lpuart-fix-potential-bug-when-using-b.patch
+	patches.suse/tty-n_gsm-clean-up-dead-code-in-gsm_queue.patch
 	patches.suse/drivers-tty-serial-Fix-deadlock-in-sa1100_set_termio.patch
 	patches.suse/sysrq-do-not-omit-current-cpu-when-showing-backtrace.patch
 	patches.suse/serial-8250-core-Remove-unneeded-linux-pm_runtime.h.patch
