- tty: n_gsm: fix missing mux reset on config change at responder   (git-fixes). - Refresh   patches.suse/tty-n_gsm-fix-restart-handling-via-CLD-command.patch.

--- a/series.conf
+++ b/series.conf
@@ -11342,6 +11342,7 @@
 	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Meteor-Lake-P.patch
 	patches.suse/usb-dwc3-gadget-Return-proper-request-status.patch
 	patches.suse/usb-phy-generic-Get-the-vbus-supply.patch
+	patches.suse/tty-n_gsm-fix-missing-mux-reset-on-config-change-at-.patch
 	patches.suse/tty-n_gsm-fix-restart-handling-via-CLD-command.patch
 	patches.suse/tty-n_gsm-fix-decoupled-mux-resource.patch
 	patches.suse/tty-n_gsm-fix-mux-cleanup-after-unregister-tty-devic.patch
