- tty: n_gsm: fix broken virtual tty handling (git-fixes). - Refresh   patches.suse/tty-n_gsm-fix-invalid-use-of-MSC-in-advanced-option.patch. - Refresh   patches.suse/tty-n_gsm-fix-software-flow-control-handling.patch. - Refresh   patches.suse/tty-n_gsm-fix-tty-registration-before-control-channe.patch. - Refresh   patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch.

--- a/series.conf
+++ b/series.conf
@@ -11361,6 +11361,7 @@
 	patches.suse/serial-imx-fix-overrun-interrupts-in-DMA-mode.patch
 	patches.suse/tty-n_gsm-fix-missing-update-of-modem-controls-after.patch
 	patches.suse/Revert-serial-sc16is7xx-Clear-RS485-bits-in-the-shut.patch
+	patches.suse/tty-n_gsm-fix-broken-virtual-tty-handling.patch
 	patches.suse/tty-n_gsm-fix-invalid-use-of-MSC-in-advanced-option.patch
 	patches.suse/tty-n_gsm-fix-software-flow-control-handling.patch
 	patches.suse/serial-8250-Also-set-sticky-MCR-bits-in-console-rest.patch
