tty: n_gsm: fix resource allocation order in gsm_activate_mux() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13221,6 +13221,7 @@
 	patches.suse/tty-n_gsm-fix-packet-re-transmission-without-open-co.patch
 	patches.suse/tty-n_gsm-fix-race-condition-in-gsmld_write.patch
 	patches.suse/tty-n_gsm-fix-deadlock-and-link-starvation-in-outgoi.patch
+	patches.suse/tty-n_gsm-fix-resource-allocation-order-in-gsm_activ.patch
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
