tty: n_gsm: fix missing corner cases in gsmld_poll() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13226,6 +13226,7 @@
 	patches.suse/tty-n_gsm-fix-wrong-T1-retry-count-handling.patch
 	patches.suse/tty-n_gsm-fix-DM-command.patch
 	patches.suse/tty-n_gsm-fix-flow-control-handling-in-tx-path.patch
+	patches.suse/tty-n_gsm-fix-missing-corner-cases-in-gsmld_poll.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
