--- a/series.conf
+++ b/series.conf
@@ -13223,6 +13223,7 @@
 	patches.suse/tty-n_gsm-fix-deadlock-and-link-starvation-in-outgoi.patch
 	patches.suse/tty-n_gsm-fix-resource-allocation-order-in-gsm_activ.patch
 	patches.suse/serial-8250_fsl-Don-t-report-FE-PE-and-OE-twice.patch
+	patches.suse/tty-n_gsm-fix-wrong-T1-retry-count-handling.patch
 	patches.suse/serial-8250_bcm7271-Save-restore-RTS-in-suspend-resu.patch
 	patches.suse/tty-serial-fsl_lpuart-correct-the-count-of-break-cha.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
