mt76: mt7921e: fix crash in chip reset fail (bsc#1201845).

--- a/series.conf
+++ b/series.conf
@@ -217,6 +217,7 @@
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
 	patches.suse/iwlwifi-module-firmware-ucode-fix.patch
+	patches.suse/mt76-mt7921e-fix-crash-in-chip-reset-fail.patch
 
 	########################################################
 	# USB
