--- a/series.conf
+++ b/series.conf
@@ -181,6 +181,7 @@
 	# Storage
 	########################################################
 	patches.suse/scsi-retry-alua-transition-in-progress
+	patches.suse/Revert-zram-remove-double-compression-logic.patch
 
 	########################################################
 	# Networking drivers (wired)
