Revert "zram: remove double compression logic" (bsc#1202203).

--- a/series.conf
+++ b/series.conf
@@ -172,6 +172,7 @@
 	# Storage
 	########################################################
 	patches.suse/scsi-retry-alua-transition-in-progress
+	patches.suse/Revert-zram-remove-double-compression-logic.patch
 
 	########################################################
 	# Networking drivers (wired)
