powerpc/powernv: delay rng platform device creation until later in boot (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -12612,6 +12612,7 @@
 	patches.suse/fbmem-Check-virtual-screen-sizes-in-fb_set_var.patch
 	patches.suse/memregion-Fix-memregion_free-fallback-definition.patch
 	patches.suse/ACPI-CPPC-Only-probe-for-_CPC-if-CPPC-v2-is-acked.patch
+	patches.suse/powerpc-powernv-delay-rng-platform-device-creation-u.patch
 	patches.suse/i2c-piix4-Fix-a-memory-leak-in-the-EFCH-MMIO-support.patch
 	patches.suse/i2c-cadence-Unregister-the-clk-notifier-in-error-pat.patch
 	patches.suse/misc-rtsx_usb-fix-use-of-dma-mapped-buffer-for-usb-b.patch
