powerpc/powernv: rename remaining rng powernv_ functions to pnv_ (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -56551,6 +56551,7 @@
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
 	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
+	patches.suse/powerpc-powernv-rename-remaining-rng-powernv_-functi.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
