--- a/series.conf
+++ b/series.conf
@@ -56232,6 +56232,7 @@
 	patches.suse/fbcon-Prevent-that-screen-size-is-smaller-than-font-.patch
 	patches.suse/fbmem-Check-virtual-screen-sizes-in-fb_set_var.patch
 	patches.suse/memregion-Fix-memregion_free-fallback-definition.patch
+	patches.suse/powerpc-powernv-delay-rng-platform-device-creation-u.patch
 	patches.suse/i2c-cadence-Unregister-the-clk-notifier-in-error-pat.patch
 	patches.suse/misc-rtsx_usb-fix-use-of-dma-mapped-buffer-for-usb-b.patch
 	patches.suse/misc-rtsx_usb-use-separate-command-and-response-buff.patch
