--- a/series.conf
+++ b/series.conf
@@ -52940,6 +52940,7 @@
 	patches.suse/powerpc-numa-Consider-the-max-NUMA-node-for-migratab.patch
 	patches.suse/pseries-drmem-update-LMBs-after-LPM.patch
 	patches.suse/powerpc-pseries-Prevent-free-CPU-ids-being-reused-on.patch
+	patches.suse/KVM-PPC-Use-arch_get_random_seed_long-instead-of-pow.patch
 	patches.suse/powerpc-book3s64-radix-make-tlb_single_page_flush_ce.patch
 	patches.suse/powerpc-pseries-Fix-build-error-when-NUMA-n.patch
 	patches.suse/powerpc-perf-hv-gpci-Fix-counter-value-parsing.patch
