KVM: PPC: Use arch_get_random_seed_long instead of powernv variant (bsc#1156395).

--- a/series.conf
+++ b/series.conf
@@ -2749,6 +2749,7 @@
 	patches.suse/powerpc-numa-Consider-the-max-NUMA-node-for-migratab.patch
 	patches.suse/pseries-drmem-update-LMBs-after-LPM.patch
 	patches.suse/powerpc-pseries-Prevent-free-CPU-ids-being-reused-on.patch
+	patches.suse/KVM-PPC-Use-arch_get_random_seed_long-instead-of-pow.patch
 	patches.suse/cpufreq-powernv-Fix-init_chip_info-initialization-in.patch
 	patches.suse/powerpc-book3s64-radix-make-tlb_single_page_flush_ce.patch
 	patches.suse/powerpc-pseries-rename-min_common_depth-to-primary_d.patch
