powerpc: powernv: kABI: add back powernv_get_random_long (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -57140,6 +57140,7 @@
 	patches.kabi/net-tun-fixup-kabi.patch
 	patches.kabi/kabi-create-module-private-struct-to-hold-btf-size-data.patch
 	patches.kabi/sysfs-Add-sysfs_emit-and-sysfs_emit_at-to-format-sys-kabi-workaround.patch
+	patches.kabi/powerpc-powernv-kABI-add-back-powernv_get_random_lon.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
