--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1566,3 +1566,4 @@ c200e4bb44e80b343c09841e7caaaca0aac5e5fa # UML not used
 4a3d2717d140401df7501a95e454180831a0c5af # xtensa not used
 63b903dfebdea92aa92ad337d8451a6fbfeabf9d # m68k specific
 734f3719d3438f9cc181d674c33ca9762e9148a1 # m68k specific
+7c8c0291f84027558bd5fca5729cbcf288c510f4 #drivers/net/ethernet: clean up unused assignments
