net/sonic: Fix a resource leak in an error handling path in 'jazz_sonic_probe()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29296,6 +29296,7 @@
 	patches.suse/bnxt_en-Fix-VLAN-acceleration-handling-in-bnxt_fix_f.patch
 	patches.suse/sch_sfq-validate-silly-quantum-values.patch
 	patches.suse/net-tc35815-Fix-phydev-supported-advertising-mask.patch
+	patches.suse/net-sonic-Fix-a-resource-leak-in-an-error-handling-p.patch
 	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_store_throughpu.patch
