net: stmmac: Modify configuration method of EEE timers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43217,6 +43217,7 @@
 	patches.suse/net-mlx5e-Fix-VLAN-cleanup-flow.patch
 	patches.suse/net-mlx5e-Fix-VLAN-create-flow.patch
 	patches.suse/net-mlx5e-Fix-race-condition-on-nhe-n-pointer-in-nei.patch
+	patches.suse/net-stmmac-Modify-configuration-method-of-EEE-timers.patch
 	patches.suse/net-hinic-fix-DEVLINK-build-errors.patch
 	patches.suse/net-team-fix-memory-leak-in-__team_options_register.patch
 	patches.suse/net-mvneta-fix-double-free-of-txq-buf.patch
