net: ftgmac100: Fix crash when removing driver (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46127,6 +46127,7 @@
 	patches.suse/bnxt_en-Avoid-unnecessary-NVM_GET_DEV_INFO-cmd-error.patch
 	patches.suse/qed-fix-error-return-code-in-qed_iwarp_ll2_start.patch
 	patches.suse/net-b44-fix-error-return-code-in-b44_init_one.patch
+	patches.suse/net-ftgmac100-Fix-crash-when-removing-driver.patch
 	patches.suse/enetc-Workaround-for-MDIO-register-access-issue.patch
 	patches.suse/netdevsim-set-.owner-to-THIS_MODULE.patch
 	patches.suse/net-tls-Fix-wrong-record-sn-in-async-mode-of-device-.patch
