kfifo: fix ternary sign extension bugs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50606,6 +50606,7 @@
 	patches.suse/pinctrl-Ingenic-Add-missing-pins-to-the-JZ4770-MAC-M.patch
 	patches.suse/pinctrl-core-Fix-kernel-doc-string-for-pin_get_name.patch
 	patches.suse/pinctrl-rockchip-do-coding-style-for-mux-route-struc.patch
+	patches.suse/kfifo-fix-ternary-sign-extension-bugs.patch
 	patches.suse/watchdog-rename-__touch_watchdog-to-a-better-descrip.patch
 	patches.suse/watchdog-explicitly-update-timestamp-when-reporting-.patch
 	patches.suse/watchdog-softlockup-report-the-overall-time-of-softl.patch
