--- a/series.conf
+++ b/series.conf
@@ -56597,6 +56597,7 @@
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
 	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
 	patches.suse/powerpc-powernv-rename-remaining-rng-powernv_-functi.patch
+	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
