--- a/series.conf
+++ b/series.conf
@@ -56601,6 +56601,7 @@
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 	patches.suse/video-fbdev-arkfb-Fix-a-divide-by-zero-bug-in-ark_se.patch
 	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
+	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
