--- a/series.conf
+++ b/series.conf
@@ -56607,6 +56607,7 @@
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
+	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
