--- a/series.conf
+++ b/series.conf
@@ -56606,6 +56606,7 @@
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
 	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
+	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
