--- a/series.conf
+++ b/series.conf
@@ -56600,6 +56600,7 @@
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
 	patches.suse/video-fbdev-sis-fix-typos-in-SiS_GetModeID.patch
 	patches.suse/video-fbdev-arkfb-Fix-a-divide-by-zero-bug-in-ark_se.patch
+	patches.suse/video-fbdev-vt8623fb-Check-the-size-of-screen-before.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
