--- a/series.conf
+++ b/series.conf
@@ -56089,6 +56089,7 @@
 	patches.suse/USB-host-isp116x-check-return-value-after-calling-pl.patch
 	patches.suse/USB-storage-karma-fix-rio_karma_init-return.patch
 	patches.suse/usb-musb-Fix-missing-of_node_put-in-omap2430_probe.patch
+	patches.suse/usb-dwc3-gadget-Replace-list_for_each_entry_safe-if-.patch
 	patches.suse/drivers-usb-host-Fix-deadlock-in-oxu_bus_suspend.patch
 	patches.suse/usb-dwc3-pci-Fix-pm_runtime_get_sync-error-checking.patch
 	patches.suse/USB-hcd-pci-Fully-suspend-across-freeze-thaw-cycle.patch
