--- a/series.conf
+++ b/series.conf
@@ -56604,6 +56604,7 @@
 	patches.suse/video-fbdev-arkfb-Check-the-size-of-screen-before-me.patch
 	patches.suse/video-fbdev-s3fb-Check-the-size-of-screen-before-mem.patch
 	patches.suse/profiling-fix-shift-too-large-makes-kernel-panic.patch
+	patches.suse/kfifo-fix-kfifo_to_user-return-type.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
