--- a/series.conf
+++ b/series.conf
@@ -56611,6 +56611,7 @@
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/watchdog-armada_37xx_wdt-check-the-return-value-of-d.patch
 	patches.suse/remoteproc-qcom-wcnss-Fix-handling-of-IRQs.patch
+	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
