--- a/series.conf
+++ b/series.conf
@@ -13526,6 +13526,7 @@
 	# Virtualization
 	########################################################
 	patches.suse/suse-hv-guest-os-id.patch
+	patches.suse/suse-hv-pci-multi-msi-reuse-IRTE.patch
 	patches.suse/0001-kvm-Reintroduce-nopvspin-kernel-parameter.patch
 
 	########################################################
