--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.rpmify/Add-ksym-provides-tool.patch
 	patches.rpmify/Revert-kconfig-only-write-CONFIG_FOO-is-not-set-for-.patch
 	patches.rpmify/BTF-Don-t-break-ABI-when-debuginfo-is-disabled.patch
+	patches.rpmify/kbuild-dummy-tools-pretend-we-understand-__LONG_DOUB.patch
 
 	########################################################
 	# The sorted section should contain all patches that are
