--- a/series.conf
+++ b/series.conf
@@ -12819,6 +12819,7 @@
 	patches.suse/sched-fair-Consider-CPU-affinity-when-allowing-NUMA-imbalance-in-find_idlest_group.patch
 	patches.suse/sched-Allow-newidle-balancing-to-bail-out-of-load_balance.patch
 	patches.suse/sched-Fix-the-check-of-nr_running-at-queue-wakelist.patch
+	patches.suse/sched-Remove-the-limitation-of-WF_ON_CPU-on-wakelist-if-wakee-cpu-is-idle.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
