sched/fair: Fix cfs_rq_clock_pelt() for throttled cfs_rq (bnc#1189999 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -11631,6 +11631,7 @@
 	patches.suse/perf-amd-ibs-use-is_visible-callback-for-dynamic-attributes.patch
 	patches.suse/perf-amd-ibs-add-support-for-l3-miss-filtering.patch
 	patches.suse/perf-amd-ibs-advertise-zen4_ibs_extensions-as-pmu-capability-attribute.patch
+	patches.suse/sched-fair-Fix-cfs_rq_clock_pelt-for-throttled-cfs_rq.patch
 	patches.suse/sched-psi-report-zeroes-for-CPU-full-at-the-system-l.patch
 	patches.suse/sched-fair-Revise-comment-about-lb-decision-matrix.patch
 	patches.suse/lockdown-also-lock-down-previous-kgdb-use.patch
