sched: Remove unused function group_first_cpu() (bnc#1189999 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -12821,6 +12821,7 @@
 	patches.suse/sched-Fix-the-check-of-nr_running-at-queue-wakelist.patch
 	patches.suse/sched-Remove-the-limitation-of-WF_ON_CPU-on-wakelist-if-wakee-cpu-is-idle.patch
 	patches.suse/sched-fair-Remove-redundant-word.patch
+	patches.suse/sched-Remove-unused-function-group_first_cpu.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
