--- a/series.conf
+++ b/series.conf
@@ -12818,6 +12818,7 @@
 	patches.suse/sched-numa-Adjust-imb_numa_nr-to-a-better-approximation-of-memory-channels.patch
 	patches.suse/sched-fair-Consider-CPU-affinity-when-allowing-NUMA-imbalance-in-find_idlest_group.patch
 	patches.suse/sched-Allow-newidle-balancing-to-bail-out-of-load_balance.patch
+	patches.suse/sched-Fix-the-check-of-nr_running-at-queue-wakelist.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
