VMCI: dma dg: set OS page size (bsc#1199291, jsc#SLE-24635).

--- a/series.conf
+++ b/series.conf
@@ -55346,6 +55346,7 @@
 	patches.suse/VMCI-dma-dg-whitespace-formatting-change-for-vmci-re.patch
 	patches.suse/VMCI-dma-dg-add-MMIO-access-to-registers.patch
 	patches.suse/VMCI-dma-dg-detect-DMA-datagram-capability.patch
+	patches.suse/VMCI-dma-dg-set-OS-page-size.patch
 	patches.suse/w1-w1_therm-fixes-w1_seq-for-ds28ea00-sensors.patch
 	patches.suse/VMCI-Fix-the-description-of-vmci_check_host_caps.patch
 	patches.suse/misc-sgi-gru-Don-t-cast-parameter-in-bit-operations.patch
