--- a/series.conf
+++ b/series.conf
@@ -55343,6 +55343,7 @@
 	patches.suse/pinctrl-nomadik-Add-missing-of_node_put-in-nmk_pinct.patch
 	patches.suse/pinctrl-rockchip-Add-missing-of_node_put-in-rockchip.patch
 	patches.suse/misc-alcor_pci-Fix-an-error-handling-path.patch
+	patches.suse/VMCI-dma-dg-whitespace-formatting-change-for-vmci-re.patch
 	patches.suse/w1-w1_therm-fixes-w1_seq-for-ds28ea00-sensors.patch
 	patches.suse/VMCI-Fix-the-description-of-vmci_check_host_caps.patch
 	patches.suse/misc-sgi-gru-Don-t-cast-parameter-in-bit-operations.patch
