VMCI: Release notification_bitmap in error path (bsc#1199291, jsc#SLE-24635).

--- a/series.conf
+++ b/series.conf
@@ -55365,6 +55365,7 @@
 	patches.suse/iio-accel-mma8452-use-the-correct-logic-to-get-mma84.patch
 	patches.suse/virtio_console-eliminate-anonymous-module_init-modul.patch
 	patches.suse/VMCI-Check-exclusive_vectors-when-freeing-interrupt-.patch
+	patches.suse/VMCI-Release-notification_bitmap-in-error-path.patch
 	patches.suse/firmware-google-Properly-state-IOMEM-dependency.patch
 	patches.suse/driver-core-dd-fix-return-value-of-__setup-handler.patch
 	patches.suse/Documentation-add-link-to-stable-release-candidate-t.patch
