VMCI: Enforce queuepair max size for IOCTL_VMCI_QUEUEPAIR_ALLOC (bsc#1199291, jsc#SLE-24635).

--- a/series.conf
+++ b/series.conf
@@ -49049,6 +49049,7 @@
 	patches.suse/misc-eeprom_93xx46-Add-module-alias-to-avoid-breakin.patch
 	patches.suse/misc-eeprom_93xx46-Add-quirk-to-support-Microchip-93.patch
 	patches.suse/VMCI-Use-set_page_dirty_lock-when-unregistering-gues.patch
+	patches.suse/VMCI-Enforce-queuepair-max-size-for-IOCTL_VMCI_QUEUE.patch
 	patches.suse/virt-vbox-Do-not-use-wait_event_interruptible-when-c.patch
 	patches.suse/bus-fsl-mc-move-fsl_mc_command-struct-in-a-uapi-head.patch
 	patches.suse/bus-fsl-mc-export-mc_cmd_hdr_read_cmdid-to-the-fsl-m.patch
