--- a/series.conf
+++ b/series.conf
@@ -55350,6 +55350,7 @@
 	patches.suse/VMCI-dma-dg-register-dummy-IRQ-handlers-for-DMA-data.patch
 	patches.suse/VMCI-dma-dg-allocate-send-and-receive-buffers-for-DM.patch
 	patches.suse/VMCI-dma-dg-add-support-for-DMA-datagrams-sends.patch
+	patches.suse/VMCI-dma-dg-add-support-for-DMA-datagrams-receive.patch
 	patches.suse/w1-w1_therm-fixes-w1_seq-for-ds28ea00-sensors.patch
 	patches.suse/VMCI-Fix-the-description-of-vmci_check_host_caps.patch
 	patches.suse/misc-sgi-gru-Don-t-cast-parameter-in-bit-operations.patch
