VMCI: Add support for ARM64 (bsc#1199291, jsc#SLE-24635).

--- a/series.conf
+++ b/series.conf
@@ -56069,6 +56069,7 @@
 	patches.suse/USB-serial-option-add-Quectel-BG95-modem.patch
 	patches.suse/USB-new-quirk-for-Dell-Gen-2-devices.patch
 	patches.suse/firmware-stratix10-svc-fix-a-missing-check-on-list-i.patch
+	patches.suse/VMCI-Add-support-for-ARM64.patch
 	patches.suse/misc-rtsx-set-NULL-intfdata-when-probe-fails.patch
 	patches.suse/iio-dummy-iio_simple_dummy-check-the-return-value-of.patch
 	patches.suse/iio-adc-ad7124-Remove-shift-from-scan_type.patch
