--- a/series.conf
+++ b/series.conf
@@ -55347,6 +55347,7 @@
 	patches.suse/VMCI-dma-dg-add-MMIO-access-to-registers.patch
 	patches.suse/VMCI-dma-dg-detect-DMA-datagram-capability.patch
 	patches.suse/VMCI-dma-dg-set-OS-page-size.patch
+	patches.suse/VMCI-dma-dg-register-dummy-IRQ-handlers-for-DMA-data.patch
 	patches.suse/w1-w1_therm-fixes-w1_seq-for-ds28ea00-sensors.patch
 	patches.suse/VMCI-Fix-the-description-of-vmci_check_host_caps.patch
 	patches.suse/misc-sgi-gru-Don-t-cast-parameter-in-bit-operations.patch
