--- a/series.conf
+++ b/series.conf
@@ -55364,6 +55364,7 @@
 	patches.suse/iio-adc-Add-check-for-devm_request_threaded_irq.patch
 	patches.suse/iio-accel-mma8452-use-the-correct-logic-to-get-mma84.patch
 	patches.suse/virtio_console-eliminate-anonymous-module_init-modul.patch
+	patches.suse/VMCI-Check-exclusive_vectors-when-freeing-interrupt-.patch
 	patches.suse/firmware-google-Properly-state-IOMEM-dependency.patch
 	patches.suse/driver-core-dd-fix-return-value-of-__setup-handler.patch
 	patches.suse/Documentation-add-link-to-stable-release-candidate-t.patch
