VMCI: Fix some error handling paths in vmci_guest_probe_device() (bsc#1199291, jsc#SLE-24635).

--- a/series.conf
+++ b/series.conf
@@ -55353,6 +55353,7 @@
 	patches.suse/VMCI-dma-dg-add-support-for-DMA-datagrams-receive.patch
 	patches.suse/w1-w1_therm-fixes-w1_seq-for-ds28ea00-sensors.patch
 	patches.suse/VMCI-Fix-the-description-of-vmci_check_host_caps.patch
+	patches.suse/VMCI-Fix-some-error-handling-paths-in-vmci_guest_pro.patch
 	patches.suse/misc-sgi-gru-Don-t-cast-parameter-in-bit-operations.patch
 	patches.suse/soundwire-intel-fix-wrong-register-name-in-intel_shi.patch
 	patches.suse/iio-inkern-apply-consumer-scale-on-IIO_VAL_INT-cases.patch
