can: m_can: process interrupt only when not runtime suspended (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46146,6 +46146,7 @@
 	patches.suse/net-mlx4_core-Fix-init_hca-fields-offset.patch
 	patches.suse/can-kvaser_usb-kvaser_usb_hydra-Fix-KCAN-bittiming-l.patch
 	patches.suse/can-flexcan-flexcan_chip_start-fix-erroneous-flexcan.patch
+	patches.suse/can-m_can-process-interrupt-only-when-not-runtime-su.patch
 	patches.suse/net-smc-fix-matching-of-existing-link-groups
 	patches.suse/net-smc-fix-direct-access-to-ib_gid_addr-ndev-in-smc_ib_determine_gid
 	patches.suse/libbpf-Don-t-attempt-to-load-unused-subprog-as-an-en.patch
