net: dsa: b53: fix an off by one in checking "vlan->vid" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48087,6 +48087,7 @@
 	patches.suse/mac80211-check-if-atf-has-been-disabled-in-__ieee802.patch
 	patches.suse/net-core-devlink-use-right-genl-user_ptr-when-handli.patch
 	patches.suse/selftests-net-fib_tests-remove-duplicate-log-test.patch
+	patches.suse/net-dsa-b53-fix-an-off-by-one-in-checking-vlan-vid.patch
 	patches.suse/bpf-Fix-helper-bpf_map_peek_elem_proto-pointing-to-w.patch
 	patches.suse/bpf-Fix-signed_-sub-add32-_overflows-type-handling.patch
 	patches.suse/can-dev-can_restart-fix-use-after-free-bug.patch
