net: hdlc_x25: Return meaningful error code in x25_open (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48376,6 +48376,7 @@
 	patches.suse/firmware_loader-align-.builtin_fw-to-8.patch
 	patches.suse/NET-usb-qmi_wwan-Adding-support-for-Cinterion-MV31.patch
 	patches.suse/netback-avoid-race-in-xenvif_rx_ring_slots_avail.patch
+	patches.suse/net-hdlc_x25-Return-meaningful-error-code-in-x25_ope.patch
 	patches.suse/msft-hv-2219-hv_netvsc-Reset-the-RSC-count-if-NVSP_STAT_FAIL-in-n.patch
 	patches.suse/net-enetc-initialize-the-RFS-and-RSS-memories.patch
 	patches.suse/net-gro-do-not-keep-too-many-GRO-packets-in-napi-rx_.patch
