net: mvpp2: fix interrupt mask/unmask skip condition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48482,6 +48482,7 @@
 	patches.suse/Bluetooth-Fix-null-pointer-dereference-in-amp_read_l.patch
 	patches.suse/Bluetooth-btusb-Fix-memory-leak-in-btusb_mtk_wmt_rec.patch
 	patches.suse/Bluetooth-btusb-Some-Qualcomm-Bluetooth-adapters-sto.patch
+	patches.suse/net-mvpp2-fix-interrupt-mask-unmask-skip-condition.patch
 	patches.suse/ath10k-fix-wmi-mgmt-tx-queue-full-due-to-race-condit.patch
 	patches.suse/rtw88-coex-8821c-correct-antenna-switch-function.patch
 	patches.suse/brcmfmac-Add-DMI-nvram-filename-quirk-for-Predia-Bas.patch
