net: lapbether: Prevent racing when checking whether the netif is running (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50366,6 +50366,7 @@
 	patches.suse/ionic-generic-tx-skb-mapping.patch
 	patches.suse/ionic-simplify-tx-clean.patch
 	patches.suse/ionic-aggregate-Tx-byte-counting-calls.patch
+	patches.suse/net-lapbether-Prevent-racing-when-checking-whether-t.patch
 	patches.suse/ionic-code-cleanup-details.patch
 	patches.suse/ionic-simplify-the-intr_index-use-in-txq_init.patch
 	patches.suse/ionic-fix-unchecked-reference.patch
