--- a/series.conf
+++ b/series.conf
@@ -55732,6 +55732,7 @@
 	patches.suse/raid5-introduce-MD_BROKEN.patch
 	patches.suse/md-fix-an-incorrect-NULL-check-in-does_sb_need_chang.patch
 	patches.suse/md-fix-an-incorrect-NULL-check-in-md_reload_sb.patch
+	patches.suse/md-bitmap-don-t-set-sb-values-if-can-t-pass-sanity-c.patch
 	patches.suse/0029-md-raid0-Ignore-RAID0-layout-if-the-second-zone-has-.patch
 	patches.suse/irqchip-exiu-Fix-acknowledgment-of-edge-triggered-in.patch
 	patches.suse/irqchip-aspeed-i2c-ic-Fix-irq_of_parse_and_map-retur.patch
