SUNRPC: Prevent immediate close+reconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53768,6 +53768,7 @@
 	patches.suse/NFS-Fix-deadlocks-in-nfs_scan_commit_list.patch
 	patches.suse/NFS-Fix-up-commit-deadlocks.patch
 	patches.suse/NFSv4-Fix-a-regression-in-nfs_set_open_stateid_locke.patch
+	patches.suse/SUNRPC-Prevent-immediate-close-reconnect.patch
 	patches.suse/nfsd-don-t-alloc-under-spinlock-in-rpc_parse_scope_i.patch
 	patches.suse/ext4-fix-lazy-initialization-next-schedule-time-comp.patch
 	patches.suse/ext4-check-for-out-of-order-index-extents-in-ext4_va.patch
