SUNRPC reverting d03727b248d0 ("NFSv4 fix CLOSE not waiting for direct IO compeletion") (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -36533,6 +36533,7 @@
 	patches.suse/ARM-dts-socfpga-Align-L2-cache-controller-nodename-with-dtschema.patch
 	patches.suse/NFS-Fix-interrupted-slots-by-sending-a-solo-SEQUENCE.patch
 	patches.suse/xprtrdma-fix-incorrect-header-size-calculations.patch
+	patches.suse/SUNRPC-reverting-d03727b248d0-NFSv4-fix-CLOSE-not-wa.patch
 	patches.suse/powerpc-book3s64-pkeys-Fix-pkey_access_permitted-for.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-Avoid-possible-buffer-overflo.patch
 	patches.suse/hwmon-emc2103-fix-unable-to-change-fan-pwm1_enable-a.patch
