NFSv4: nfs4_proc_set_acl needs to restore NFS_CAP_UIDGID_NOMAP on error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51207,6 +51207,7 @@
 	patches.suse/scsi-core-Fix-failure-handling-of-scsi_add_host_with_dma.patch
 	patches.suse/scsi-core-Put-.shost_dev-in-failure-path-if-host-state-changes-to-RUNNING.patch
 	patches.suse/scsi-core-Only-put-parent-device-if-host-state-differs-from-SHOST_CREATED.patch
+	patches.suse/NFSv4-nfs4_proc_set_acl-needs-to-restore-NFS_CAP_UID.patch
 	patches.suse/NFS-Fix-use-after-free-in-nfs4_init_client.patch
 	patches.suse/NFS-Fix-a-potential-NULL-dereference-in-nfs_get_clie.patch
 	patches.suse/NFSv4-Fix-deadlock-between-nfs4_evict_inode-and-nfs4.patch
