NFS: fix nfs_path in case of a rename retry (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45363,6 +45363,7 @@
 	patches.suse/power-supply-bq27xxx-report-not-charging-on-all-type.patch
 	patches.suse/power-supply-test_power-add-missing-newlines-when-pr.patch
 	patches.suse/NFSv4-Wait-for-stateid-updates-after-CLOSE-OPEN_DOWN.patch
+	patches.suse/NFS-fix-nfs_path-in-case-of-a-rename-retry.patch
 	patches.suse/ida-Free-allocated-bitmap-in-error-path.patch
 	patches.suse/ceph-promote-to-unsigned-long-long-before-shifting.patch
 	patches.suse/libceph-clear-con-out_msg-on-policy-stateful_server-faults.patch
